Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-21 WinMerge experimental release 2.5.7.1 (SVN revision 3600)

2006-09-21 Kimmo
 PATCH: [ 1558213 ] Tweak text positions in splash screen
  Src: Splash.cpp
 Bump ShellExtension version to 1.9.0 (first 64-bit Windows version)
  ShellExtension: ShellExtension.rc
 Fix 64-bit typecast warning
  Src: GhostTextBuffer.h
 Fix 64-bit pointer truncation in SetWindowLongPtr call (the last I hope)
  Src: ChildFrm.cpp
 Minor tweaks to 64-bit ShellExtension project file
  ShellExtension: ShellExtensionX64.vcproj

2006-09-20 Kimmo
 PATCH: [ 1561788 ] Fix 64-bit CFile constructor usage
  Src/Common: UniFile.cpp
 PATCH: [ 1561796 ] Get/SetWindowLong not supported in 64-bit Windows
  Src: 7zCommon.cpp ChildFrm.cpp
  Src/Common: CSubclass.cpp sizecbar.cpp
 BUG: [ 1561781 ] 64-bit compile errors from 7zCommon.cpp
  Src: 7zCommon.cpp
 PATCH: [ 1561650 ] Separate FilterCommentsManager code from DiffWrapper
  Src: DiffWrapper.cpp DiffWrapper.h Merge.dsp
  Src new files: FilterCommentsManager.cpp FilterCommentsManager.h
 Fix 64-bit compile warning by casting last SendMessage() param to LPARAM
  Src: Merge.cpp
 Fix hex number used instead of INVALID_HANDLE_VALUE
  Src/Common: sinstance.cpp
 Fix 64-bit pointer truncation in SetWindowLongPtr call
  Src: ChildFrm.cpp

2006-09-19 Kimmo
 PATCH: [ 1561001 ] Fix FileActionScript type in running actions
  Src: FileActionScript.cpp
 PATCH: [ 1561008 ] Warning fix for FileActionScript
  Src: DirDoc.cpp
 PATCH: [ 1561080 ] Cleanup for loglevel definition
  Src: DirDoc.cpp DirScan.cpp MainFrm.cpp Plugins.cpp StdAfx.cpp
  Src/Common: LogFile.cpp LogFile.h

2006-09-18 Kimmo
 Cleanup 64-bit ShellExtension projectfile, add a debug target
  ShellExtension: ShellExtensionX64.vcproj

2006-09-16 Kimmo
 PATCH: [ 1559619 ] 64-bit shellextension project file
  ShellExtension new files: ShellExtensionX64.def ShellExtensionX64.vcproj