@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-09-22 Kimmo
+ PATCH: [ 1563157 ] Fix coretools.cpp for 64-bit
+  Src/Common: coretools.cpp coretools.h
+
 2006-09-21 WinMerge experimental release 2.5.7.1 (SVN revision 3600)
 
 2006-09-21 Kimmo
